Fix icon alignment

--- a/results-summary-component/css/styles.css
+++ b/results-summary-component/css/styles.css
@@ -95,7 +95,7 @@ h2 {
 
 img {
   margin-right: 12px;
-  vertical-align: text-top;
+  vertical-align: text-bottom;
 }
 
 #reaction {
